<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.search_food_truck.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.example.search_food_truck.ui.map.MapFragment"
        android:label="@string/tittle_maps"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.search_food_truck.ui.notifications.NotificationsFragment"
        android:label="@string/tittle_account"
        tools:layout="@layout/fragment_notifications" />
</navigation>