<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="412dp"
        android:layout_height="611dp"
        android:layout_marginTop="128dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_AgergarImg"
            android:layout_width="140dp"
            android:layout_height="34dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="1dp"
            android:text="@string/imagen"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txt_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="1dp"
            android:text="@string/nombre"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.702" />

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="51dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/editnombreFT"
            app:layout_constraintBottom_toTopOf="@+id/txt_PatenteFt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_PatenteFt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="1dp"
            android:text="@string/patente"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextNumPatente"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNombre"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editTextNumPatente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/editapatente"
            app:layout_constraintBottom_toTopOf="@+id/txt_AddDescripcion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_PatenteFt" />

        <TextView
            android:id="@+id/txt_AddDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="1dp"
            android:text="@string/descripcion"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumPatente"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/editDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/editDescripcion"
            app:layout_constraintBottom_toTopOf="@+id/txt_Telefono"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_AddDescripcion" />

        <TextView
            android:id="@+id/txt_Telefono"
            android:layout_width="112dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/telefono"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTelefono"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="336dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/editTelefono"
            android:inputType="number|phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_Agregar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="532dp"
            android:layout_marginEnd="16dp"
            android:text="@string/btn_Agregar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.375"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="342dp"
            android:layout_height="87dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="Seleccionar imagen"
            android:onClick="onImageButtonClick"
            android:src="@android:drawable/ic_menu_gallery"
            app:layout_constraintBottom_toTopOf="@+id/btn_Agregar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTelefono"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtAgregar_Foodtruck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/txt_titulo4"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

