<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="107dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="594dp"
        android:src="@drawable/user" />

    <TextView
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="513dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="normal"
        tools:text="Hola [nombre]!" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="424dp"
        android:clickable="true"
        tools:ignore="MissingConstraints">
        <!-- Línea superior -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="#000000" />


        <!-- Línea inferior -->

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:src="@drawable/user2" />

        <TextView
            android:id="@+id/txtInfoPersonal"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="17dp"
            android:text="@string/OpcionInfoP"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtInfoPersonal"
            android:background="#000000"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlAddFT"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="352dp"
        android:clickable="true"
        tools:ignore="MissingConstraints">
        <!-- Línea superior -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="#000000" />

        <!-- Línea inferior -->

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:src="@drawable/add" />

        <TextView
            android:id="@+id/txtAddFT"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="17dp"
            android:text="@string/OpcionAddFT"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider_bottom2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtAddFT"
            android:background="#000000" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="280dp"
        android:clickable="true"
        tools:ignore="MissingConstraints">

        <!-- Línea superior -->

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentTop="true"
            android:background="#000000" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="66dp"
            android:layout_height="41dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:src="@drawable/herramienta" />

        <TextView
            android:id="@+id/txtConfig"
            android:layout_width="313dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="17dp"
            android:text="@string/OpcionConf"
            android:textSize="20sp" />
        <!-- Línea inferior -->
        <View
            android:id="@+id/divider_bottom3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/txtConfig"
            android:background="#000000"/>
    </RelativeLayout>

</RelativeLayout>